--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,24 +3,19 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Homepage
+    url: https://www.titanhunters.io
+  - name: dApp
+    url: https://app.titanhunters.io
+  - name: API
+    url: https://prod-api.titanhunters.io
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  cname: status.titanhunters.io
+  logoUrl: https://www.titanhunters.io/images/logo_TH.webp
+  name: Titan Hunters Status
+  introTitle: "Titan Hunters Status"
+  introMessage: Status for Titan Hunters
   navbar:
     - title: Status
       href: /
